cdk8s/dist/pod-info.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/port: "9898"
    prometheus.io/scrape: "true"
  name: pod-info-deployment-c843ec4f
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: pod-info-Deployment-c8fa6694
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: pod-info-Deployment-c8fa6694
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - ./podinfo
            - --port=9898
            - --level=info
            - --random-error=true
          image: stefanprodan/podinfo:3.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - localhost:$9898/healthz
            failureThreshold: 3
            initialDelaySeconds: 1
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 9898
          readinessProbe:
            exec:
              command:
                - podcli
                - check
                - http
                - localhost:$9898/readyz
            failureThreshold: 3
            initialDelaySeconds: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 9898
          volumeMounts:
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: data
---
apiVersion: v1
kind: Service
metadata:
  name: pod-info-deployment-service-c8f0ebf8
spec:
  externalIPs: []
  ports:
    - port: 9898
      targetPort: 9898
  selector:
    cdk8s.io/metadata.addr: pod-info-Deployment-c8fa6694
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-info-deployment-service-ingress-c8658a6f
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: pod-info-deployment-service-c8f0ebf8
                port:
                  number: 9898
            path: /*
            pathType: Prefix
